<resources>
    <string name="app_name">HiBye</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Войти</string>
    <string name="text_login_code">Вернуться на экран входа</string>
    <string name="text_back_choose_event">Вернуться к выбору мероприятий</string>
    <string name="text_registration">Зарегистрироваться</string>
    <string name="text_phone_number">Номер телефона</string>
    <string name="text_search_participant">Ищите по имени, профессии, интересам</string>
    <string name="text_chat_hint">Сообщение</string>
    <string name="text_password">Пароль</string>
    <string name="text_password_repeat">Повторите пароль</string>
    <string name="text_event_code">Код мероприятия:</string>
    <string name="text_event_login">Войти в мероприятие</string>
    <string name="text_schedule">Расписание</string>
    <string name="text_networking">Нетворкинг</string>
    <string name="text_chats">Чаты</string>
    <string name="text_find_chat">Найти случайного собеседника</string>
    <string name="text_participant">Участники</string>
    <string name="text_all">Все</string>
    <string name="text_meetings">Встречи</string>
    <string name="text_create">Создать</string>
    <string name="text_back">Назад</string>
    <string name="text_filters">Фильтры</string>
    <string name="text_event_2">Событие</string>
    <string name="text_your_event">Ваши мероприятия</string>
    <string name="text_add_event">Добавить мероприятие</string>
    <string name="text_list_speaker">Список спикеров</string>
    <string name="text_all_participant">Все участники</string>
    <string name="text_add_favorite">Добавить в избранное</string>
    <string name="text_add_new_event">Добавить новое мероприятие</string>
    <string name="text_error_login">Неверный телефон или пароль</string>
    <string name="text_error_photo">Обязательно добавьте фото</string>
    <string name="text_error_code">Неверный код мероприятия</string>
    <string name="text_error_new_event">Выберите время в будущем</string>
    <string name="text_meet">Встреча</string>
    <string name="text_create_profile_titlt">Анкета</string>
    <string name="text_create_user_title">Заполните данные о себе для текущего мероприятия</string>
    <string name="text_close_meet">Отменить</string>
    <string name="text_name_event">Название встречи</string>
    <string name="text_description_event">Описание встречи</string>
    <string name="text_meet_time">Время встречи</string>
    <string name="text_choose_time">Выбрать дату</string>
    <string name="text_limit_participant">Ограничение по участникам</string>
    <string name="text_count_particiopant">Количество участников (Число)</string>
    <string name="text_meet_end">Встреча закончилась</string>
    <string name="text_meet_not_begin">Встреча не состоялась</string>
    <string name="text_go_to_chat">Перейти в чат</string>
    <string name="text_login_group">Вступить</string>
    <string name="text_save">Сохранить</string>
    <string name="text_quick_meet">Быстрая встреча</string>
    <string name="text_profile">Профиль</string>
    <string name="text_group_meet">Групповая встреча</string>
    <string name="text_error_password">Пароли не сопадают</string>
    <string name="text_error_phone">Введите корректный телефон</string>
    <string name="text_error_registration">Пользователь с таким телефоном уже существует</string>
    <string name="text_error_len_password">Пароль должен быть минимум из 8 символов</string>
    <string name="text_request_profile">Запрос (кого вы ищете)</string>
    <string name="text_your_name">Ваше имя</string>
    <string name="text_about_me">Расскажите о себе</string>
</resources>