<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewEventFragment"
    android:orientation="vertical"
    android:background="@color/edit_text_background_nav_bar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:id="@+id/text_button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sfp_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/text_close_meet"
                    android:textColor="@color/main_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sfp_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/text_meet"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sfp_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/text_create"
                    android:textColor="@color/text_hint_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/color_hint_event"
                    app:counterTextColor="@color/black"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="true"
                    style="@style/CustomTextInputLayout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name_event"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_event_background"
                        android:fontFamily="@font/sfp_regular"
                        android:includeFontPadding="false"
                        android:textFontWeight="500"
                        android:hint="@string/text_name_event"
                        android:inputType="text"
                        android:minHeight="60dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint_event"
                        android:textCursorDrawable="@drawable/cursor_style_background"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/color_hint_event"
                    app:counterTextColor="@color/black"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="true"
                    style="@style/CustomTextInputLayout"
                    android:layout_marginTop="8dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_description_event"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_event_background"
                        android:fontFamily="@font/sfp_regular"
                        android:includeFontPadding="false"
                        android:textFontWeight="500"
                        android:hint="@string/text_description_event"
                        android:inputType="text"
                        android:minHeight="60dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint_event"
                        android:textCursorDrawable="@drawable/cursor_style_background"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>