<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateProfileFragment"
    android:orientation="vertical"
    android:background="@color/edit_text_background_nav_bar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sfp_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/text_create_profile_titlt"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp">

                <ImageView
                    android:id="@+id/image_participant"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_profile" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/color_hint_event"
                    app:counterTextColor="@color/black"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="true"
                    style="@style/CustomTextInputLayout"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_event_background"
                        android:fontFamily="@font/sfp_regular"
                        android:includeFontPadding="false"
                        android:textFontWeight="500"
                        android:hint="@string/text_your_name"
                        android:inputType="text"
                        android:minHeight="60dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint_event"
                        android:textCursorDrawable="@drawable/cursor_style_background"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/color_hint_event"
                    app:counterTextColor="@color/black"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="true"
                    style="@style/CustomTextInputLayout"
                    android:layout_marginTop="8dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_about_me"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_event_background"
                        android:fontFamily="@font/sfp_regular"
                        android:includeFontPadding="false"
                        android:textFontWeight="500"
                        android:hint="@string/text_about_me"
                        android:inputType="text"
                        android:minHeight="60dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint_event"
                        android:textCursorDrawable="@drawable/cursor_style_background"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/color_hint_event"
                    app:counterTextColor="@color/black"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="true"
                    style="@style/CustomTextInputLayout"
                    android:layout_marginTop="8dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_request"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_event_background"
                        android:fontFamily="@font/sfp_regular"
                        android:includeFontPadding="false"
                        android:textFontWeight="500"
                        android:hint="@string/text_request_profile"
                        android:inputType="text"
                        android:minHeight="60dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint_event"
                        android:textCursorDrawable="@drawable/cursor_style_background"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_color"
                    android:fontFamily="@font/sfp_semibold"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="4sp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/text_save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="12dp"
                    android:layout_marginTop="16dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>