<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_login"
            android:layout_marginHorizontal="85dp"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:textColorHint="@color/text_hint_color"
                app:counterTextColor="@color/black"
                app:cursorColor="@color/black"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/sfp_semibold"
                    android:hint="@string/text_phone_number"
                    android:inputType="textEmailAddress"
                    android:minHeight="60dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint_color"
                    android:textCursorDrawable="@drawable/cursor_style_background"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/text_hint_color"
                app:counterTextColor="@color/black"
                app:cursorColor="@color/black"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/sfp_semibold"
                    android:hint="@string/text_password"
                    android:inputType="textEmailAddress"
                    android:minHeight="60dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint_color"
                    android:textCursorDrawable="@drawable/cursor_style_background"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/sfp_semibold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4sp"
            android:paddingHorizontal="31dp"
            android:paddingVertical="16dp"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>